# claude-arcade

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  claude-arcade
.github/workflows/: ci.yml  release.yml
hooks/: notification.sh  pre_tool_use.sh  session_end.sh  session_start.sh  stop.sh
src/: install.rs  main.rs  menu.rs  state.rs  stats.rs  tui.rs
src/game/: board.rs  input.rs  mod.rs  render.rs
src/games/: mod.rs
src/games/game2048/: mod.rs  render.rs
src/games/minesweeper/: board.rs  input.rs  mod.rs  render.rs
src/games/tictactoe/: mod.rs  render.rs
